# rpg_vikit

./: CMakeLists.txt  README.md
dacuda/: CMakeLists.txt
vikit_common/: CMakeLists.txt  package.xml  vikit_commonConfig.cmake.in
vikit_common/include/vikit/: aligned_mem.h  blender_utils.h  file_reader.h  file_reader_types.h  homography.h  img_align.h  math_utils.h  nlls_solver.h  nlls_solver_impl.hpp  patch_score.h  pinhole_camera.h  ringbuffer.h  robust_cost.h  sample.h  timer.h  user_input_thread.h  vision.h
vikit_common/src/: atan_camera.cpp  homography.cpp  img_align.cpp  math_utils.cpp  omni_camera.cpp  performance_monitor.cpp  pinhole_camera.cpp  user_input_thread.cpp  vision.cpp
vikit_common/test/: test_patch_score.cpp
vikit_py/src/vikit_py/: align_trajectory.py  cpu_info.py  ros_node.py  rotation_utils.py
vikit_ros/: CMakeLists.txt  package.xml
vikit_ros/include/vikit/: camera_loader.h
vikit_ros/src/: output_helper.cpp
